--- a/tweet-saver-extension/manifest.json
+++ b/tweet-saver-extension/manifest.json
@@ -37,7 +37,7 @@
         "https://youtube.com/*",
         "https://www.youtube.com/*"
       ],
-      "js": ["content.js"],
+      "js": ["utils/config.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_end"
     },
@@ -52,7 +52,8 @@
   ],
   
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   
   "action": {
