Extract platform selectors and config to constants
- Created constants/selectors.js with platform-specific CSS selectors
- Created constants/config.js with timing, patterns, and button config
- Updated content.js to use centralized constants
- Removed ~189 lines of hardcoded selectors
- Easier maintenance when platforms update their UI

--- a/tweet-saver-extension/manifest.json
+++ b/tweet-saver-extension/manifest.json
@@ -37,7 +37,7 @@
         "https://youtube.com/*",
         "https://www.youtube.com/*"
       ],
-      "js": ["utils/config.js", "content.js"],
+      "js": ["utils/config.js", "constants/selectors.js", "constants/config.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_end"
     },
