--- a/tweet-saver-extension/manifest.json
+++ b/tweet-saver-extension/manifest.json
@@ -37,7 +37,7 @@
         "https://youtube.com/*",
         "https://www.youtube.com/*"
       ],
-      "js": ["utils/config.js", "constants/selectors.js", "constants/config.js", "content.js"],
+      "js": ["utils/config.js", "constants/selectors.js", "constants/config.js", "platforms/base-platform-handler.js", "platforms/twitter-handler.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_end"
     },
