Extract API client service into separate class
- Created NotesApiClient class to centralize API communication
  (saveNote and testConnection methods)
- Refactored savePost() in content.js to use ApiClient
- Refactored extractAndSaveTranscript() in content.js to use ApiClient
- Replaced testAPIEndpoint() in background.js with ApiClient
- Updated manifest.json to load api-client.js before content.js
- Added proper ES6 module exports and global window exposure

This improves code reusability and separates API concerns from business logic.

--- a/tweet-saver-extension/manifest.json
+++ b/tweet-saver-extension/manifest.json
@@ -37,7 +37,7 @@
         "https://youtube.com/*",
         "https://www.youtube.com/*"
       ],
-      "js": ["utils/config.js", "constants/selectors.js", "constants/config.js", "platforms/base-platform-handler.js", "platforms/twitter-handler.js", "platforms/linkedin-handler.js", "platforms/youtube-handler.js", "ui/save-button.js", "ui/action-bar-finder.js", "content.js"],
+      "js": ["utils/config.js", "constants/selectors.js", "constants/config.js", "platforms/base-platform-handler.js", "platforms/twitter-handler.js", "platforms/linkedin-handler.js", "platforms/youtube-handler.js", "services/api-client.js", "ui/save-button.js", "ui/action-bar-finder.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_end"
     },
