--- a/notes-app/frontend/Dockerfile
+++ b/notes-app/frontend/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:18-alpine AS builder
 
+# Build argument for API URL (can be overridden at build time)
+ARG VUE_APP_API_URL=http://localhost:8080
+ENV VUE_APP_API_URL=$VUE_APP_API_URL
+
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
